Added clarifying comments

--- a/Python_Notebooks/Assignments/Assignment_1.ipynb
+++ b/Python_Notebooks/Assignments/Assignment_1.ipynb
@@ -232,6 +232,8 @@
     }
    ],
    "source": [
+    "#a. Find the number of walks of length 5.\n",
+    "\n",
     "def get_walks(graph, v_index, steps):\n",
     "\n",
     "    valid_walks = 0    \n",
@@ -257,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#b. Find the number of cycles of length 4 (induced, that is, without chords). (INCOMPLETE: was unable to complete this by the time of the assignments due date)\n",
     "#IGNORE: INCOMPLETE\n",
     "def get_cycles(graph, v_index, steps, node_list, seen_node_set):\n",
     "\n",
@@ -289,9 +292,7 @@
     "        \n",
     "    print(f\"List: {node_list}\")\n",
     "    print(f\"returning {valid_cycles} case 4\")\n",
-    "    return valid_cycles\n",
-    "\n",
-    "\n"
+    "    return valid_cycles"
    ]
   },
   {
