--- a/Python_Notebooks/Assignments/Assignment_2.ipynb
+++ b/Python_Notebooks/Assignments/Assignment_2.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value of ratio is a bit less than the probability p + p = 1/2. This is to be expected as there are some edges that will be common to both graph 1 and graph 2, so it makes sense our total number of connected edges for the union of our graphs is a bit less than p + p = 1/2."
+    "The value of ratio is a bit less than the probability p + p = 1/2. This is to be expected as there are some edges that will be common to both graph 1 and graph 2, so it makes sense our total number of connected edges for the union of our graphs is a bit less than p + p = 1/2, which assumes indpendent probabilities."
    ]
   },
   {
@@ -381,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -397,6 +397,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e2b5b1f831ddc9aefa4b96d1686710814664aefd36c7fef437f9f148da185091"
