--- a/Python_Notebooks/Assignments/Assignment_3.ipynb
+++ b/Python_Notebooks/Assignments/Assignment_3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Assignment #3:\n",
-    "Problems 1, 2, 3, 5 from Chapter 3 (pages 88-89) "
+    "Problems 1, 2, 3, 5 from Chapter 3 (pages 88-89). First few cells are initial setup, questions are labeled below"
    ]
   },
   {
