--- a/Python_Notebooks/Assignments/Assignment_5_python.ipynb
+++ b/Python_Notebooks/Assignments/Assignment_5_python.ipynb
@@ -354,52 +354,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Q2 Answer: \n",
-    "\n",
-    "Full Output:\n",
-    "\n",
-    "COMPARISONS FOR CNM - MOST SIMILAR: LABEL PROP\n",
-    "CNM vs ECG AMI: 0.5203547488464255\n",
-    "CNM vs Louvain AMI: 0.6175719100274567\n",
-    "CNM vs Info_map AMI: 0.4544759978952388\n",
-    "CNM vs Label Prop AMI: 0.6850320979448454\n",
-    "CNM vs CNM AMI: 1.0\n",
-    "\n",
-    "\n",
-    "COMPARISONS FOR ECG - MOST SIMILAR: INFO MAP\n",
-    "ECG vs ECG AMI: 1.0\n",
-    "ECG vs Louvain AMI: 0.6013590463320131\n",
-    "ECG vs Info_map AMI: 0.6088437931270099\n",
-    "ECG vs Label Prop AMI: 0.4959272018772716\n",
-    "ECG vs CNM AMI: 0.5203547488180151\n",
-    "\n",
-    "\n",
-    "COMPARISONS FOR Louvain - MOST SIMILAR: LABEL PROPAGATION\n",
-    "Louvain vs ECG AMI: 0.6013590463490521\n",
-    "Louvain vs Louvain AMI: 1.0\n",
-    "Louvain vs Info_map AMI: 0.5114945302159781\n",
-    "Louvain vs Label Prop AMI: 0.6270863954516563\n",
-    "Louvain vs CNM AMI: 0.6175719100232777\n",
-    "\n",
-    "\n",
-    "COMPARISONS FOR Info Map - MOST SIMILAR: ECG\n",
-    "Info Map vs ECG AMI: 0.6088437931208596\n",
-    "Info Map vs Louvain AMI: 0.5114945301441123\n",
-    "Info Map vs Info_map AMI: 1.0\n",
-    "Info Map vs Label Prop AMI: 0.3024381755145819\n",
-    "Info Map vs CNM AMI: 0.4544759978026166\n",
-    "\n",
-    "\n",
-    "COMPARISONS FOR Label Prop - MOST SIMILAR: CNM\n",
-    "Label Prop vs ECG AMI: 0.49592720188880174\n",
-    "Label Prop vs Louvain AMI: 0.6270863954410633\n",
-    "Label Prop vs Info_map AMI: 0.3024381756415401\n",
-    "Label Prop vs Label Prop AMI: 1.0\n",
-    "Label Prop vs CNM AMI: 0.6850320979344253\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -877,7 +832,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -891,9 +846,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.0"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e2b5b1f831ddc9aefa4b96d1686710814664aefd36c7fef437f9f148da185091"
